--- a/app/scss/_team.scss
+++ b/app/scss/_team.scss
@@ -21,6 +21,7 @@
   @media (min-width: 768px) {
     flex-direction: row;
     justify-content: space-between;
+    align-items: flex-start;
   }
 }
 
